2010-05-10  Kevin B. Kenny  <kennykb@acm.org>

	* aclocal.m4:	Synchronized with the 'tdbc' package.
	* configure.in: Advanced release to 1.0b15 and TEA version to 3.7.
			Added code to detect VC++ and include the stub
			library by path rather than with -L and -l.
	* generic/fakesql.h:
			Corrected syntax of INSTAPI specifiers.
	* generic/odbcStubDefs.txt:
			Added a CONVENTION: SQL_API line so that 
			genExtStubs.tcl can get the syntax right on the
			pointer-to-function declarations.
	* generic/odbcStubInit.txt:
			Corrected syntax of INSTAPI specifiers. Regenerated.
	* generic/odbcStubs.h:
			Regenerated.
	* generic/tdbcodbc.c:
			Silenced several VC++ warnings.
	* README:	Advanced release to 1.0b15.
	* tclconfig/:	Advanced to TEA 3.7
	* configure:	autoconf-2.59
	
2010-05-10  Andreas Kupries  <andreask@activestate.com>

	* Makefile.in: Removed attempt to generate a stub library. Drivers
	  do not export stub tables.

2010-04-30  Kevin B. Kenny  <kennykb@acm.org>

	* Makefile.in: Added missing files to 'make dist.' Added a 'genstubs'
	               rule to automate building of the Stubs table from the
		       ODBC library added at run time.
	* generic/fakesql.h:
	* generic/odbcStubDefs.txt:
	* generic/odbcStubInit.c:
		Fixed DOS line endings.
	
2010-04-25  Kevin B. Kenny  <kennykb@acm.org>

	* configure.in:
	* README:       Advance version to 1.0b14
	* configure:    autoconf 2-59
	
2010-04-10  Kevin B. Kenny  <kennykb@acm.org>

	* configure.in:
	* Makefile.in:  Added code to specify to 'make test' and 'make shell'
	                the value of TDBC_LIBRARY, needed for
	                [package require tdbc] to work. This library is
	                either the 'library' subdirectory of the TDBC source
	                directory (when running from an un-installed TDBC)
	                or else the TDBC library directory in the installed
	                Tcl.
	* configure: autoconf 2.59
	
2010-04-08  Kevin B. Kenny  <kennykb@acm.org>
